--- a/home/darwin/wm/aerospace/aerospace.toml
+++ b/home/darwin/wm/aerospace/aerospace.toml
@@ -13,7 +13,7 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-    'exec-and-forget /opt/homebrew/bin/borders active_color=0xffc4b28a inactive_color=0xff494d64 width=5.0'
+    # 'exec-and-forget /opt/homebrew/bin/borders active_color=0xffc4b28a inactive_color=0xff494d64 width=5.0'
 ]
 
 # Start AeroSpace at login
